* Added newline parsing to the comments module (#000011)
* Added encoding override on templates.  Fixed bugs with
htmlentities. (#000002, #000006)
* Added missing CSS to the horizontal menu (#000008)
* Added check to lang/addline.sh to make sure line doesn't already
exist (#000017)
* Added German translation (Piratos)
* Added new div and swaptitledate parameter to News module
* Fixed email in add/edit user to accept 255 characters (#000003)
* Fixed htmlblob NOTICE level messages (#000005)
* Fixed delete confirmation text in file management (#000012)
* Fixed java syntax highlighting to submit if advnaced wasn't expanded (#0000016)
* Removed most references to BBCode without breaking backwards
compatibility (#000013)
* Removed a rogue div from the Comments module (#000010)

Version 0.7 -- Mon Oct 11 2004
-----------------

* Added HTML blobs for easy administration of small chunks of html (Genie #3)
* Added Image Manager to the files section for advanced image handling
functions
* Added horizontal option to dhtmlmenu (leen)
* Added new admin style
* Added new install and upgrade look
* Added language as a user perference and also moved it to the login page
* Added java based syntax highlighting as a user preference
* Added support for mysql 4.1+ using the mysqli adodb driver
* Added cancel link to login page that redirects back to site (Genie #6)
* Added auto_upgrade functionality to modules (Genie #4)
* Added more intelligent handling of file types to file management
* Added ability to override the default encoding of the whole site, admin
included (Genie #15)
* Fixed News module so that post date shows on newly created items (Genie #5)
* Fixed bug with start and end dates when adding new News item (BamaRob)
* Fixed missing template option for News module (trac #67)
* Updated adodb to 4.53

Version 0.6.3 -- Wed Sep 22 2004 
-----------------

* Fixed a very bad bug where you can login with no password

Version 0.6.2 -- Tue Sep 20 2004 
-----------------
